je viens d'ajouter le package  qui va me permettre d'exploiter les infos de la batterie

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   device_info_plus: ^10.1.2
+  battery_plus: ^6.0.3
 
 dev_dependencies:
   flutter_test:
